# BeerBot

./: LICENSE  README.md
3DParts/: CalibrationBlock.FCStd  Greifer.FCStd  Podest.FCStd
beerbot-client/: pom.xml
beerbot-client/src/main/java/org/krieger/beerbot/client/: BeerNetClient.java  MainApp.java  MapWidget.java  Message.java  MoveWidget.java  ScannerWidget.java
beerbot-client/src/main/java/org/krieger/beerbot/data/: GuestEntry.java  Map.java  Position.java
beerbot-client/src/main/resources/: MainApp.fxml  MapWidget.fxml  MoveController.fxml  ScannerWidget.fxml
client-ui/: CMakeLists.txt
client-ui/src/: main.cpp
cpp/: BeerBot.cpp  BeerBot.h  BeerBotConfig.h.in  CMakeLists.txt  Logger.cpp  Logger.h  main.cxx
cpp/controller/: BluetoothCtrl.cpp  BluetoothCtrl.h  DriveController.cpp  DriveController.h  Eyescanner.cpp  Eyescanner.h
cpp/hardware/: Distance.cpp  Distance.h  DriveMotor.cpp  DriveMotor.h  Eyescanner.cpp  Eyescanner.h  OdoMeter.cpp  OdoMeter.h  StepMotor.cpp  StepMotor.h
cpp/mapping/: TinySLAM.cpp  TinySLAM.h
cpp/mpu6050/: I2Cdev.cpp  I2Cdev.h  demo_dmp.cpp
cpp/server/: BeerBotServer.cpp  BeerBotServer.h  ClientHandler.cpp  ClientHandler.h
elektronics/eye/: Eye.kicad_pcb  Eye.net  Eye.pro  Eye.sch
python/: Distance.py  DriveMotor.py  EyeScanner.py  GyroSensor.py  Stepper.py  main.py
python/objectdetector/: detector.py  utils.py
